crates/uitest/fixtures/ty_check/event_attr_empty_form.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/event_attr_empty_form.fe
---
error[12-0002]: invalid `#[event]` attribute form on struct `Event`
  ┌─ event_attr_empty_form.fe:1:1
  │
1 │ #[event()]
  │ ^^^^^^^^^^ expected `#[event]`

error[12-0002]: invalid `#[indexed]` attribute form on event field `topic`
  ┌─ event_attr_empty_form.fe:3:5
  │
3 │     #[indexed()]
  │     ^^^^^^^^^^^^ expected `#[indexed]`
